amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/unknown-map-key-property/dialect.report
ModelId: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/unknown-map-key-property/dialect.yaml
Profile: 
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/aml#missing-node-mapping-range-term
  Message: Cannot find property name in mapping range
  Severity: Violation
  Target: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/unknown-map-key-property/dialect.yaml#/declarations/CloudformationRoot/property/Resources
  Property: http://a.ml/vocabularies/meta#mapProperty
  Range: [(16,16)-(16,20)]
  Location: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/unknown-map-key-property/dialect.yaml
